fix haml linter warnings and fix restructure bugs
Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/views/edit_mailaccount.haml
+++ b/views/edit_mailaccount.haml
@@ -1,6 +1,6 @@
 %h1 Edit MailAccount
-%form{id: 'edit_mailaccount',
+%form{ id: 'edit_mailaccount',
   method: 'PATCH',
-  action: "/mailaccounts/#{@mailaccount.id}"}
-    %input{type: 'hidden', name: '_method', value: 'PATCH'}
+  action: "/api/v1/mailaccounts/#{@mailaccount.id}" }
+    %input{ type: 'hidden', name: '_method', value: 'PATCH' }
     = haml :form_mailaccount
