--- a/views/login.haml
+++ b/views/login.haml
@@ -1,13 +1,17 @@
-%div{class: 'login-panel'}
-  %div{class: 'panel-header'} VHost-API
-  %div{class: 'panel-body'}
-    %div{class: 'flash-message'}
-      =find_and_preserve styled_flash
-    %form{accept: {charset: 'UTF-8'}, action: '/api/v1/auth/login', role: 'form', method: 'POST'}
+.login-panel
+  .panel-header VHost-API
+  .panel-body
+    .flash-message
+      = find_and_preserve styled_flash
+    %form{ accept: { charset: 'UTF-8' }, action: '/api/v1/auth/login',
+           role: 'form', method: 'POST' }
       %fieldset
-        %div{class: 'form-group'}
-          %input{id: 'user', type: 'text', name: 'user[login]', placeholder: 'Username', class: 'form-control', autofocus: 'autofocus'}
-        %div{class: 'form-group'}
-          %input{id: 'password', type: 'password', name: 'user[password]', placeholder: 'Password', class: 'form-control'}
-        %div{class: 'right'}
-          %input{type: 'submit', value: 'Log In', class: 'formbutton'}
+        .form-group
+          %input.form-control#user{ type: 'text', name: 'user[login]',
+            placeholder: 'Username',
+            autofocus: 'autofocus' }
+        .form-group
+          %input.form-control#password{ type: 'password',
+            name: 'user[password]', placeholder: 'Password' }
+        .right
+          %input.formbutton{ type: 'submit', value: 'Log In' }
