--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,8 +1,5 @@
-%h2
-  4 Oh 4!
-%p
-  This is not the page you are looking for.
-%p
-  Why not go back to the
-  %a{:href => "/", :title => "home page"} Homepage
-  and start over?
+%h2 4 Oh 4!
+%p This is not the page you are looking for.
+%p Why not go back to the
+%a{ href: '/', title: 'home page' } Homepage
+and start over?
