--- a/views/dkim.haml
+++ b/views/dkim.haml
@@ -1,7 +1,6 @@
-%div{class: 'table-wrapper'}
+.table-wrapper
   %table.table.table-triped
-    %caption
-      DKIM Keys
+    %caption DKIM Keys
     %thead
       %tr
         %th= 'enabled'
@@ -11,30 +10,33 @@
         %th= 'created_at'
         %th= 'updated_at'
         %th= 'domain_id'
-        %th= ''
+        %th
     %tbody
       -# - policy_scope(Dkim).each do |dkim|
       - @dkims.each do |dkim|
         %tr
-          %td{class: 'icon'}
-            - enable_href_suffix = dkim.enabled ? 'disable' : 'enable'
-            - enable_class_suffix = dkim.enabled ? 'icon-check item-enabled' : 'icon-cross item-disabled'
-            - enable_link_text = dkim.enabled ? 'yes' : 'no'
-            %a{href: "/mail/dkim/#{dkim.id}/#{enable_href_suffix}", class: "icon #{enable_class_suffix}"}= " #{enable_link_text}"
+          %td.icon
+            - enable_href_suffix = dkim['enabled'] ? 'disable' : 'enable'
+            - en = 'icon-check item-enabled'
+            - dis = 'icon-cross item-disabled'
+            - enable_class_suffix = dkim['enabled'] ? en : dis
+            - enable_link_text = dkim['enabled'] ? 'yes' : 'no'
+            %a{ href: "/mail/dkim/#{dkim['id']}/#{enable_href_suffix}",
+               class: "icon #{enable_class_suffix}" }= enable_link_text
           %td
-            %a{href: "/mail/dkim/#{dkim.id}/edit"}= dkim.selector
-          %td= dkim.private_key[0..15].gsub(/\s\w+\s*$/, '...')
-          %td= dkim.public_key[0..15].gsub(/\s\w+\s*$/, '...')
-          %td= dkim.created_at
-          %td= dkim.updated_at
-          %td= dkim.domain_id
-          %td{class: 'icon item-delete'}
-            %a{href: "/mail/dkim/#{dkim.id}/delete", class: 'item-delete icon icon-trash'}= ' delete'
+            %a{ href: "/mail/dkim/#{dkim['id']}/edit" }= dkim['selector']
+          %td= dkim['private_key'][0..15].gsub(%r{/\s\w+\s*$/}, '...')
+          %td= dkim['public_key'][0..15].gsub(%r{/\s\w+\s*$/}, '...')
+          %td= dkim['created_at']
+          %td= dkim['updated_at']
+          %td= dkim['domain_id']
+          %td.icon.item-delete
+            - delete_path = "/mail/dkim/#{dkim['id']}/delete"
+            %a.icon.icon-trash.item-delete{ href: delete_path } delete
 
-%div{class: 'table-wrapper'}
+.table-wrapper
   %table.table.table-triped
-    %caption
-      DKIM Author-Key Associations
+    %caption DKIM Author-Key Associations
     %thead
       %tr
         %th= 'enabled'
@@ -42,20 +44,25 @@
         %th= 'created_at'
         %th= 'updated_at'
         %th= 'dkim_id'
-        %th= ''
+        %th
     %tbody
       -# - policy_scope(DkimSigning).each do |dkimsigning|
-      - @dkimsignings.each do |dkimsigning|
+      - @dkimsignings.each do |dkimsgn|
         %tr
-          %td{class: 'icon'}
-            - enable_href_suffix = dkimsigning.enabled ? 'disable' : 'enable'
-            - enable_class_suffix = dkimsigning.enabled ? 'icon-check item-enabled' : 'icon-cross item-disabled'
-            - enable_link_text = dkimsigning.enabled ? 'yes' : 'no'
-            %a{href: "/mail/dkimsigning/#{dkimsigning.id}/#{enable_href_suffix}", class: "icon #{enable_class_suffix}"}= " #{enable_link_text}"
+          %td.icon
+            - enable_href_suffix = dkimsgn['enabled'] ? 'disable' : 'enable'
+            - en = 'icon-check item-enabled'
+            - dis = 'icon-cross item-disabled'
+            - enable_class_suffix = dkimsgn['enabled'] ? en : dis
+            - enable_link_text = dkimsgn['enabled'] ? 'yes' : 'no'
+            %a{ href: "/mail/dkimsgn/#{dkimsgn['id']}/#{enable_href_suffix}",
+                class: "icon #{enable_class_suffix}" }= enable_link_text
           %td
-            %a{href: "/mail/dkimsigning/#{dkimsigning.id}/edit"}= dkimsigning.author
-          %td= dkimsigning.created_at
-          %td= dkimsigning.updated_at
-          %td= dkimsigning.dkim_id
-          %td{class: 'icon item-delete'}
-            %a{href: "/mail/dkimsigning/#{dkimsigning.id}/delete", class: 'item-delete icon icon-trash'}= ' delete'
+            - edit_path = "/mail/dkimsigning/#{dkimsgn['id']}/edit"
+            %a{ href: edit_path }= dkimsgn['author']
+          %td= dkimsgn['created_at']
+          %td= dkimsgn['updated_at']
+          %td= dkimsgn['dkim_id']
+          %td.icon.item-delete
+            - delete_path = "/mail/dkimsgn/#{dkimsgn['id']}/delete"
+            %a.icon.icon-trash.item-delete{ href: delete_path } delete
