implement basic policies for every model
All policies should now properly support a scoped resolve functions that
includes model-specific constraints.

Most of the policies are very basic without any restrictions regarding
the permitted_attributes feature. Some more advanced usage can be found
in policies/mailaccount_policy.rb as of this commit.

Fixes T12

Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/views/domains.haml
+++ b/views/domains.haml
@@ -1,12 +1,13 @@
 .table-wrapper
   %table.table.table-triped
     %caption Domains
-    %thead
-      %tr
-        - @domains[0].keys.each do |key|
-          %th= key
-    %tbody
-      - @domains.each do |d|
+    - unless @domains.nil? || @domains.empty?
+      %thead
         %tr
-        - d.keys.each do |key|
-          %td= d[key]
+          - @domains[0].keys.each do |key|
+            %th= key
+      %tbody
+        - @domains.each do |d|
+          %tr
+          - d.keys.each do |key|
+            %td= d[key]
