Add css for the progressbar layoyt to center the text
Ref T9

--- a/public/css/own.css
+++ b/public/css/own.css
@@ -111,3 +111,14 @@ body {
 .navbar-brand-pad {
     margin-top: 10px;
 }
+
+.progress {
+    position: relative;
+}
+
+.progress span {
+    position: absolute;
+    display: block;
+    width: 100%;
+    color: black;
+}
