--- a/views/layout.haml
+++ b/views/layout.haml
@@ -7,61 +7,60 @@
     %meta{ content: '', name: 'description' }
     %meta{ content: '', name: 'author' }
     %title= @title
-    -# %link{ rel: :stylesheet, type: 'text/css', href: '/css/test.css' }
-    -# = css "#{settings.cssdir}/styles".to_sym
-    -# %link{ href: "/#{settings.cssdir}/styles.css", media: 'Screen',
-    -#  rel: 'stylesheet' }
-    -# %link{ href: "/#{settings.cssdir}/mobile.css", media: 'handheld',
-    -#  rel: 'stylesheet' }
     %link{ href: "/#{settings.cssdir}/bootstrap.min.css", rel: 'stylesheet' }
     %link{ href: "/#{settings.cssdir}/own.css", rel: 'stylesheet' }
     %link{ href: "/#{settings.cssdir}/icon.css", rel: 'stylesheet' }
-    
-    -# %script{:src => '/js/jquery.js' }
-    -# %script{:src => '/js/jquery-ui.min.js' }
-    -# %script{:src => '/js/application.js' }
-    -# %script{:src => '/js/test.js' }
+
     %link{ href: '/img/favicon.ico', rel: 'shortcut icon' }
   %body
     %nav.navbar.navbar-inverse.navbar-fixed-top
       .container-fluid
         .navbar-header
-          %button.navbar-toggle.collapsed{"aria-controls" => "navbar", "aria-expanded" => "false", "data-target" => "#navbar", "data-toggle" => "collapse", :type => "button"}
+          %button.navbar-toggle.collapsed{ 'aria-controls' => 'navbar',
+                                           'aria-expanded' => 'false',
+                                           'data-target' => '#navbar',
+                                           'data-toggle' => 'collapse',
+                                           :type => 'button' }
             %span.sr-only Toggle navigation
             %span.icon-bar
             %span.icon-bar
             %span.icon-bar
-          %a.navbar-brand.navbar-brand-pad{:href => "#"} VHost-Api
-        #navbar.navbar-collapse.collapse
+          %a.navbar-brand.navbar-brand-pad{ href: '#' } VHost-Api
+        .navbar.navbar-collapse.collapse
           %ul.nav.navbar-nav
             = haml :nav
           %ul.nav.navbar-nav.navbar-right
             - if !@user.nil?
               %li.dropdown
 
-                %a.dropdown-toggle{"aria-expanded" => "false", :"aria-haspopup" => "true", "data-toggle" => "dropdown", :href => "#", :role => "button"}
-                  #{@user.name}
+                %a.dropdown-toggle{ 'aria-expanded': 'false',
+                                    'aria-haspopup': 'true',
+                                    'data-toggle': 'dropdown',
+                                    href: '#',
+                                    role: 'button' }
+                  = @user.name
                   %span.caret
                 %ul.dropdown-menu
                   %li
-                    %a{:href => "/logout"}
+                    %a{ href: '/logout' }
                       .icon.icon-logout
                         Logout
-            - else            
+            - else
               %li
-                %a{:href => "/login", :title => "Login"}
+                %a{ href: '/login',
+                    title: 'Login' }
                   Login
     .container-fluid
       .row
       - if !@sidebar_elements.nil?
         .col-sm-3.col-md-2.sidebar
           %ul.nav.nav-sidebar
-            = haml :sidebar 
+            = haml :sidebar
         .col-sm-9.col-sm-offset-3.col-md-10.col-md-offset-2.main
           = yield
       - else
         .col-sm-12.col-md-10.col-md-offset-2.main
-          = yield        
+          = yield
 
-    %script{:src => '/js/jquery.js' }
-    %script{:src => '/js/bootstrap.min.js' }
+    %script{ src: '/js/jquery.js' }
+    %script{ src: '/js/bootstrap.min.js' }
