add some vhost preparations and more seeds_dev
Ref T15

Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/views/nav.haml
+++ b/views/nav.haml
@@ -19,7 +19,7 @@
     .icon.icon-mail.icon-title
     .title Mail
 %li
-  %a{ href: '/vhosts', title: 'VHosts', class: nav_current?('vhosts') }
+  %a{ href: '/webhosting', title: 'VHosts', class: nav_current?('webhosting') }
     .icon.icon-web.icon-title
     .title VHosts
 %li
