Fix navbar layout
Ref T9

--- a/views/layout.haml
+++ b/views/layout.haml
@@ -26,7 +26,7 @@
             %span.icon-bar
             %span.icon-bar
           %a.navbar-brand.navbar-brand-pad{ href: '#' } VHost-Api
-        .navbar.navbar-collapse.collapse
+        .navbar-collapse.collapse#navbar
           %ul.nav.navbar-nav
             = haml :nav
           %ul.nav.navbar-nav.navbar-right
