--- a/views/nav.haml
+++ b/views/nav.haml
@@ -36,7 +36,7 @@
     .icon.icon-settings.icon-title
     .title Settings
 %li
-  %a{ href: 'https://webmail.nano-srv.net/', target: '_blank',
+  %a{ href: settings.webmail_link, target: '_blank',
       title: 'Webmail' }
     .icon.icon-webmail.icon-title
     .title Webmail
