trim annoying whitespaces using '<'
Signed-off-by: Thore Boedecker <me@foxxx0.de>

--- a/views/edit_mailaccount.haml
+++ b/views/edit_mailaccount.haml
@@ -1,6 +1,6 @@
 %h1 Edit MailAccount
 %form{ id: 'edit_mailaccount',
   method: 'PATCH',
-  action: "/api/v1/mailaccounts/#{@mailaccount.id}" }
+  action: "/api/v1/mailaccounts/#{@mailaccount.id}" }<
     %input{ type: 'hidden', name: '_method', value: 'PATCH' }
     = haml :form_mailaccount
