--- a/views/users.haml
+++ b/views/users.haml
@@ -5,9 +5,9 @@
       %thead
         %tr
           - @users[0].keys.each do |key|
-            %th= key
+            %th<= key
       %tbody
         - @users.each do |u|
           %tr
           - u.keys.each do |key|
-            %td= u[key]
+            %td<= u[key]
