--- a/views/domains.haml
+++ b/views/domains.haml
@@ -5,9 +5,9 @@
       %thead
         %tr
           - @domains[0].keys.each do |key|
-            %th= key
+            %th<= key
       %tbody
         - @domains.each do |d|
           %tr
           - d.keys.each do |key|
-            %td= d[key]
+            %td<= d[key]
