--- a/views/layout.haml
+++ b/views/layout.haml
@@ -43,7 +43,7 @@
                 %ul.dropdown-menu
                   %li
                     %a{ href: '/logout' }
-                      .icon.icon-logout
+                      .icon.icon-logout<
                         Logout
             - else
               %li
