--- a/views/mailaliases.haml
+++ b/views/mailaliases.haml
@@ -5,9 +5,9 @@
       %thead
         %tr
           - @mailaliases[0].keys.each do |key|
-            %th= key
+            %th<= key
       %tbody
         - @mailaliases.each do |mailalias|
           %tr
           - mailalias.keys.each do |key|
-            %td= mailalias[key]
+            %td<= mailalias[key]
