--- a/views/mailsources.haml
+++ b/views/mailsources.haml
@@ -5,9 +5,9 @@
       %thead
         %tr
           - @mailsources[0].keys.each do |key|
-            %th= key
+            %th<= key
       %tbody
         - @mailsources.each do |mailsource|
           %tr
           - mailsource.keys.each do |key|
-            %td= mailsource[key]
+            %td<= mailsource[key]
