--- a/views/not_found.haml
+++ b/views/not_found.haml
@@ -1,5 +1,5 @@
 %h2 4 Oh 4!
 %p This is not the page you are looking for.
-%p Why not go back to the
-%a{ href: '/', title: 'home page' } Homepage
-and start over?
+= precede 'Why not go back to the ' do
+  = succeed ' and start over?' do
+    %a{ href: '/', title: 'home page' }< Homepage
