--- a/views/vhosts.haml
+++ b/views/vhosts.haml
@@ -5,9 +5,9 @@
       %thead
         %tr
           - @vhosts[0].keys.each do |key|
-            %th= key
+            %th<= key
       %tbody
         - @vhosts.each do |v|
           %tr
           - v.keys.each do |key|
-            %td= v[key]
+            %td<= v[key]
